--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
 					
 					<ul>
 						<li>
-							<a href="ChildPages/porfolio.html">Porfolio</a>&#8195;&#8195;
+							<a href="../ChildPages/porfolio.html">Porfolio</a>&#8195;&#8195;
 						</li>
 					</ul>
 					<ul>
 						<li>
-							<a href="ChildPages/aboutMe.html">AboutMe</a>&#8195;&#8195;
+							<a href="../ChildPages/aboutMe.html">AboutMe</a>&#8195;&#8195;
 						</li>
 					</ul>
 				</div>
@@ -148,28 +148,28 @@
 		<div class="link-trans"  style="margin-top: 3%;margin-left: 5%;">
 			<ul>
 				<li>
-					<a style="font-style: oblique;" href="ChildPages/photography.html">photography artwork</a>
+					<a style="font-style: oblique;" href="../ChildPages/photography.html">photography artwork</a>
 				</li>
 			</ul>
 			<br>
 			<br>
 			<ul>
 				<li>
-					<a style="font-style: oblique;">handmaking</a>
+					<a style="font-style: oblique;" href="../ChildPages/handmaking.html">handmaking</a>
 				</li>
 			</ul>
 			<br>
 			<br>
 			<ul>
 				<li>
-					<a  style="font-style: oblique;">modeling</a>
+					<a  style="font-style: oblique;" href="../ChildPages/modeling.html">modeling</a>
 				</li>
 			</ul>
 			<br>
 			<br>
 			<ul>
 				<li>
-					<a style="font-style: oblique;">coding</a>
+					<a style="font-style: oblique;" href="../ChildPages/coding.html">coding</a>
 				</li>
 			</ul>
 					
