--- a/ChildPages/photography.html
+++ b/ChildPages/photography.html
@@ -83,7 +83,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="./porfolio.html"style="padding-left: 50px;">
+                    <a href="porfolio.html"style="padding-left: 50px;">
                         Porfolio
 
                     </a>
@@ -91,7 +91,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="./aboutMe.html"style="padding-left: 50px;">
+                    <a href="aboutMe.html"style="padding-left: 50px;">
                         About Me
 
                     </a>
