--- a/ChildPages/porfolio.html
+++ b/ChildPages/porfolio.html
@@ -61,7 +61,7 @@
 <body>
     <section>
         <div id="header" style="width=auto">
-            <h1 style="font-size: 70px; margin-top: -1%;height: 106%4;">LERIC</h1>
+            <h1 style="font-size: 70px; margin-top: -1%;height: 106%;">LERIC</h1>
         </div>
     </section>
 
@@ -163,7 +163,7 @@ In digital painting, a feeling of cloth is designed by using IP address of my co
 	
 	<div style="width: 100%; height: 100%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="../img/08-37-57_3.gif"></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="../img/1.gif"></div>
 		    
 		    <div class="right"><img style="width: 30%;height: 100%;" src="../img/1.jpg" ></div>
 		</div>
