--- a/ChildPages/porfolio.html
+++ b/ChildPages/porfolio.html
@@ -71,7 +71,7 @@
 
     <section>
 
-        <div id="leader" style="height: 7.5rem; font-size: 20px;margin-left: 50%;margin-top: -10%;">
+        <div id="leader" style="padding-top: 6%; font-size:30px;" align="right">
 
             <ul>
                 <li>
