--- a/ChildPages/porfolio.html
+++ b/ChildPages/porfolio.html
@@ -71,7 +71,7 @@
 
     <section>
 
-        <div id="leader" style="padding-top: 6%; font-size:30px;" align="right">
+        <div id="leader" style="padding-top: 6%; font-size:30px;pedding-left:60%;" align="right">
 
             <ul>
                 <li>
