--- a/ChildPages/porfolio.html
+++ b/ChildPages/porfolio.html
@@ -61,7 +61,7 @@
 <body>
     <section>
         <div id="header" style="width=auto">
-            <h1 style="font-size: 70px; margin-top: -1%;height: 6%;">LERIC</h1>
+            <h1 style="font-size: 70px; margin-top: -1%;height: 106%4;">LERIC</h1>
         </div>
     </section>
 
@@ -71,7 +71,7 @@
 
     <section>
 
-        <div id="leader" style="padding-top: 6%; font-size:30px;pedding-left:60%;" align="right">
+        <div id="leader" style="height: 7.5rem; font-size: 30px;margin-left: 50%;margin-top: -7%;">
 
             <ul>
                 <li>
@@ -83,7 +83,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="porfolio.html"style="padding-left: 50px;">
+                    <a href="./porfolio.html"style="padding-left: 50px;">
                         Porfolio
 
                     </a>
@@ -91,7 +91,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="aboutMe.html"style="padding-left: 50px;">
+                    <a href="./aboutMe.html"style="padding-left: 50px;">
                         About Me
 
                     </a>
@@ -163,7 +163,7 @@ In digital painting, a feeling of cloth is designed by using IP address of my co
 	
 	<div style="width: 100%; height: 100%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="../img/1.gif"></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="../img/08-37-57_3.gif"></div>
 		    
 		    <div class="right"><img style="width: 30%;height: 100%;" src="../img/1.jpg" ></div>
 		</div>
