--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 					
 					<ul>
 						<li>
-							<a href="ChildPages/porfolio.html">Porfolio</a>&#8195;&#8195;
+							<a href="ChildPages/porfolio.html">Porfolio</a>
 						</li>
 					</ul>
 					
