--- a/ChildPages/modeling.html
+++ b/ChildPages/modeling.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="LiuYang_Leric">
     <meta name="copyright" content="LiuYang">
-	<title>Porfolio</title>
+	<title>modeling</title>
     <meta name="keywords" content="personal">
 	 
     <meta name="description" content="describe what i'm doing">
