--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
 		<div class="footer">
 			<div class="footLeft"style="margin-top:10% ;">
 				<h1 style="color: aliceblue; font-size: 5px;">Email:13716919012@163.com</h1>
-				<h1 style="color: aliceblue;font-size: 5px;">Instgram</h1>	
-				<h1 style="color: aliceblue;font-size: 5px;">Facebook</h1>
+				<h1 style="color: aliceblue;font-size: 5px;">Instgram:LiuYang_Leric</h1>	
+				<h1 style="color: aliceblue;font-size: 5px;">Facebook:leric leo</h1>
 				<h1 style="color: #FFFFFF;font-size: 5px;">Contect Me©Yang Liu</h1>
 			</div>
 		</div>
