--- a/ChildPages/handmaking.html
+++ b/ChildPages/handmaking.html
@@ -253,8 +253,8 @@
 	<div class="wrap wrap3" id="footer" style="width: 100%; height: 10%; background-color:black;">
 		<div class="left" style="padding-left: 2%;">
 			<h1 style="color: #FFFFFF; padding-top: 1%;">Email:13716919012@163.com</h1>
-			<h1 style="color: #FFFFFF; padding-top: px;">instgram:</h1>
-			<h1 style="color: #FFFFFF; padding-top: 10px;">Facebook:</h1>
+			<h1 style="color: #FFFFFF; padding-top: px;">instgram:LiuYang_Leric</h1>
+			<h1 style="color: #FFFFFF; padding-top: 10px;">Facebook:Leric leo</h1>
 			
 		</div>
 		<div class="right">
