--- a/ChildPages/modeling.html
+++ b/ChildPages/modeling.html
@@ -75,7 +75,7 @@
 
             <ul>
                 <li>
-                    <a href="../index.html" >
+                    <a href="/lerically.github.io/index.html" >
                         Home
 
                     </a>
@@ -83,7 +83,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="porfolio.html"style="padding-left: 50px;">
+                    <a href="/lerically.github.io/ChildPages/porfolio.html"style="padding-left: 50px;">
                         Porfolio
 
                     </a>
@@ -116,9 +116,9 @@
 	
 	<div style="width: 100%; height: 100%;">
 		<div class="wrap3 wrap" >
-		    <div class="left" ><img style="width: 100%;height: 100%;" src="./img/modeling/3.jpg"></div>
+		    <div class="left" ><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/modeling/3.jpg"></div>
 		    
-		    <div class="right" ><img style="width: 100%;height: 100%;" src="./img/modeling/4.jpg"></div>
+		    <div class="right" ><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/modeling/4.jpg"></div>
 		</div>
 		
 	</div>	
@@ -130,8 +130,8 @@
 	
 	<div style="width:100%; height: 100%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="./img/modeling/5.PNG"></div>
-		    <div class="right"><img style="width: 100%;height: 100%;" src="./img/modeling/6.PNG"></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/modeling/5.PNG"></div>
+		    <div class="right"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/modeling/6.PNG"></div>
 		</div>
 		
 	</div>	
@@ -142,9 +142,9 @@
 	
 	<div style="width: 100%; height: 100%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="./img/modeling/7.PNG"></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/modeling/7.PNG"></div>
 		    
-		    <div class="right"><img style="width: 100%;height: 100%;" src="./img/modeling/8.PNG"></div>
+		    <div class="right"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/modeling/8.PNG"></div>
 		</div>
 		
 	</div>	
