--- a/ChildPages/photography.html
+++ b/ChildPages/photography.html
@@ -75,7 +75,7 @@
 
             <ul>
                 <li>
-                    <a href="../index.html" >
+                    <a href="/lerically.github.io/index.html" >
                         Home
 
                     </a>
@@ -83,7 +83,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="porfolio.html"style="padding-left: 50px;">
+                    <a href="/lerically.github.io/ChildPages/porfolio.html"style="padding-left: 50px;">
                         Porfolio
 
                     </a>
@@ -103,9 +103,9 @@
 	<section>
 	<div style="width: 100%; height: 100%;">
 	    <div class="wrap3 wrap">
-	        <div class="left"><img style="width: 50%;height: 100%;" src="./img/photography/1.JPG"></div>
+	        <div class="left"><img style="width: 50%;height: 100%;" src="/lerically.github.io/img/photography/1.JPG"></div>
 	        
-	        <div class="right"><img style="width: 50%;height: 100%;" src="./img/photography/4.jpg"></div>
+	        <div class="right"><img style="width: 50%;height: 100%;" src="/lerically.github.io/img/photography/4.jpg"></div>
 	   </div>
 	
 	
@@ -114,8 +114,8 @@
 	
 	<div style="width: 100%; height: 100%; margin-top: 10%;">
 		<div class="wrap3 wrap" >
-		    <div class="left" ><img style="width: 100%;height: 100%;" src="./img/photography/3.JPG"></div>
-		    <div class="right" ><img style="width: 100%;height: 100%;" src="./img/photography/2.JPG"></div>
+		    <div class="left" ><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/3.JPG"></div>
+		    <div class="right" ><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/2.JPG"></div>
 		</div>
 		
 	
@@ -126,8 +126,8 @@
 	
 	<div style="width:100%; height: 100%;margin-top: 10%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="./img/photography/5.jpg"></div>
-		    <div class="right"><img style="width:100%;height: 100%;" src="./img/photography/6.jpg"></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/5.jpg"></div>
+		    <div class="right"><img style="width:100%;height: 100%;" src="/lerically.github.io/img/photography/6.jpg"></div>
 		</div>
 	
 	
@@ -136,8 +136,8 @@
 	
 	<div style="width: 100%; height: 100%;margin-top: 10%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="./img/photography/7.JPG"></div>
-		    <div class="right"><img style="width: 100%;height: 100%;" src="./img/photography/8.JPG" ></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/7.JPG"></div>
+		    <div class="right"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/8.JPG" ></div>
 		</div>
 	
 	
@@ -145,22 +145,22 @@
 	
 	<div style="width: 100%; height: 100%;margin-top: 10%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="../img/photography/9.JPG" ></div>
-		    <div class="right"><img style="width: 50%;height: 100%;" src="./img/photography/10.JPG" ></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/9.JPG" ></div>
+		    <div class="right"><img style="width: 50%;height: 100%;" src="/lerically.github.io/img/photography/10.JPG" ></div>
 		</div>
 	
 	
 	<div style="width: 100%; height: 100%;margin-top: 10%;">
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="./img/photography/11.JPG" ></div>
-		    <div class="right"><img style="width: 100%;height: 100%;" src="./img/photography/12.JPG" ></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/11.JPG" ></div>
+		    <div class="right"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/12.JPG" ></div>
 		</div>
 		
 		
 	<div style="width: 100%; height: 100%;margin-top: 10%;">	
 		<div class="wrap3 wrap">
-		    <div class="left"><img style="width: 100%;height: 100%;" src="./img/photography/13.jpg" ></div>
-		    <div class="right"><img style="width: 60%;height: 100%;" src="./img/photography/14.jpg" ></div>
+		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/photography/13.jpg" ></div>
+		    <div class="right"><img style="width: 60%;height: 100%;" src="/lerically.github.io/img/photography/14.jpg" ></div>
 		</div>
 	
 	</section>
