--- a/ChildPages/handmaking.html
+++ b/ChildPages/handmaking.html
@@ -156,7 +156,7 @@
 		<div class="wrap3 wrap">
 		    <div class="left"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/7.jpg"></div>
 		    
-		    <div class="right"><img style="width: 100%;height: 100%;" src="../img/handmaking/8.jpg"></div>
+		    <div class="right"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/8.jpg"></div>
 		</div>
 		
 	</div>
