--- a/ChildPages/modeling.html
+++ b/ChildPages/modeling.html
@@ -103,9 +103,9 @@
 	<section>
 	<div style="width: 100%; height: 100%;">
 	    <div class="wrap3 wrap" style="margin-top: 5%;">
-	        <div class="left"><img style="width: 50%;height: 100%;" src="./img/modeling/1.PNG"></div>
+	        <div class="left"><img style="width: 50%;height: 100%;" src="/lerically.github.io/img/modeling/1.PNG"></div>
 	        
-	        <div class="right"><img style="width: 50%;height: 100%;" src="./img/modeling/2.jpg"></div>
+	        <div class="right"><img style="width: 50%;height: 100%;" src="/lerically.github.io/img/modeling/2.jpg"></div>
 	   </div>
 	
 			
