--- a/ChildPages/porfolio.html
+++ b/ChildPages/porfolio.html
@@ -75,7 +75,7 @@
 
             <ul>
                 <li>
-                    <a href="../index.html" >
+                    <a href="/lerically.github.io/index.html" >
                         Home
 
                     </a>
@@ -83,7 +83,7 @@
             </ul>
             <ul>
                 <li>
-                    <a href="./porfolio.html"style="padding-left: 50px;">
+                    <a href="/lerically.github.io/ChildPages/porfolio.html"style="padding-left: 50px;">
                         Porfolio
 
                     </a>
