--- a/ChildPages/handmaking.html
+++ b/ChildPages/handmaking.html
@@ -73,11 +73,11 @@
 	
 	<section>
 	<div style="width: 100%; height: 100%;margin-top: 7%;">
-	        <div class="grid"><img style="width: 100%;height: 100%;" src="../img/handmaking/1.jpg"></div>
+	        <div class="grid"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/1.jpg"></div>
 			
 	</div>
 	<div style="width: 100%; height: 100%;margin-top: 1%;">
-	        <div class="grid"><img style="width: 100%;height: 100%;" src="../img/handmaking/10.jpg"></div>
+	        <div class="grid"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/10.jpg"></div>
 			
 	</div>
 	
@@ -85,11 +85,11 @@
 	
 	
 	<div style="width: 100%; height: 100%;margin-top: 7%;">
-		    <div class="grid"><img style="width: 100%;height: 100%;" src="../img/handmaking/11.jpg"></div>
+		    <div class="grid"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/11.jpg"></div>
 			
 	</div>
 	<div style="width: 100%; height: 100%;margin-top: 1%;">
-		<div class="grid"><img style="width: 100%;height: 100%;" src="../img/handmaking/2.jpg"></div>
+		<div class="grid"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/2.jpg"></div>
 	</div>	
 	
 	
@@ -99,11 +99,11 @@
 	
 	
 	<div style="width: 100%; height: 100%;margin-top: 7%;">
-		    <div class="grid"><img style="width: 100%;height: 100%;" src="../img/handmaking/3.jpg"></div>
+		    <div class="grid"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/3.jpg"></div>
 			
 	</div>
 	<div style="width: 100%; height: 100%;margin-top: 1%;">
-			<div class="grid"><img style="width:100%;height: 100%;" src="../img/handmaking/4.jpg"></div>
+			<div class="grid"><img style="width:100%;height: 100%;" src="/lerically.github.io/img/handmaking/4.jpg"></div>
 			
 		
 	</div>	
@@ -114,11 +114,11 @@
 	
 	
 	<div style="width: 100%; height: 100%;margin-top: 1%;">
-		    <div class="grid"><img style="width: 100%;height: 100%;" src="../img/handmaking/5.jpg"></div>
+		    <div class="grid"><img style="width: 100%;height: 100%;" src="/lerically.github.io/img/handmaking/5.jpg"></div>
 			
 	</div>
 	<div style="width: 100%; height: 100%;margin-top: 1%;">
-			<div class="grid" style="text-align: center;"><img style="width: 30%;height: 100%;vertical-align: center;" src="../img/handmaking/6.jpg" ></div>
+			<div class="grid" style="text-align: center;"><img style="width: 30%;height: 100%;vertical-align: center;" src="/lerically.github.io/img/handmaking/6.jpg" ></div>
 			
 	</div>	
 	
@@ -127,16 +127,16 @@
 	
 	
 		<div style="width: 100%; height: 100%;margin-top: 1%;">
-		    <div class="grid" style="text-align: center;"> <img style="width: 30%;height: 100%;" src="../img/handmaking/7.jpg" ></div>
+		    <div class="grid" style="text-align: center;"> <img style="width: 30%;height: 100%;" src="/lerically.github.io/img/handmaking/7.jpg" ></div>
 			
 		</div>
 		<div style="width: 100%; height: 100%;margin-top: 1%;">
-		    <div class="grid" style="text-align: center;"><img style="width: 30%;height: 100%;" src="../img/handmaking/8.jpg" ></div>
+		    <div class="grid" style="text-align: center;"><img style="width: 30%;height: 100%;" src="/lerically.github.io/img/handmaking/8.jpg" ></div>
 			
 		</div>
 		
 		<div style="width: 100%; height: 100%;margin-top: 1%;">
-		    <div class="grid" style="text-align: center;"> <img style="width: 30%;height: 100%;" src="../img/handmaking/_FBY2033.jpg" ></div>
+		    <div class="grid" style="text-align: center;"> <img style="width: 30%;height: 100%;" src="/lerically.github.io/img/handmaking/_FBY2033.jpg" ></div>
 		
 	
 	</section>
