--- a/UI.html
+++ b/UI.html
@@ -20,7 +20,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light stroke">
 		<a class="navbar-brand" href="#index.html">
-            <img src="assets/images/LOGO.png" alt="LY" title="LY" style="height:60px;" />
+            <img src="assets/images/Profolio/LOGO.png" alt="LY" title="LY" style="height:60px;" />
         </a> 
       <a class="navbar-brand" href="index.html">
         <span>LERIC</span>
@@ -133,16 +133,16 @@
         <div class="container py-lg-4 py-md-3">
             <div class="contact-heading text-center mb-5">
                 <span class="text">My Portfolio </span>
-                <h3 class="title-big">Some of my <span>Latest works</span></h3>
+                <h3 class="title-big">UI <span>Gallery </span></h3>
             </div>
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/1.gif" class="img-fluid" alt="" />
+                            <img src="assets/images/Profolio/UI1.gif" class="img-fluid" alt="" />
                             <div class="template-info">
-                                <h3>Digital - Private</h3>
-                                <p class="description">UI-Mobile</p>
+                                <h3>UI</h3>
+                                <p class="description">Present</p>
                             </div>
                         </a>
                     </div>
@@ -150,10 +150,10 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/2.jpg" class="img-fluid" alt="" />
+                            <img src="assets/images/Profolio/UI2.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
-                                <h3>Digital - Private</h3>
-                                <p class="description">UI-Mobile </p>
+                                <h3>UI</h3>
+                                <p class="description">UI-Homepage1</p>
                             </div>
                         </a>
                     </div>
@@ -161,10 +161,10 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/3.jpg" class="img-fluid" alt="" />
+                            <img src="assets/images/Profolio/UI3.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
-                                <h3>Digital - Private</h3>
-                                <p class="description">UI-Mobile</p>
+                                <h3>UI</h3>
+                                <p class="description">UI-Homepage2</p>
                             </div>
                         </a>
                     </div>
@@ -172,47 +172,15 @@
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/11.gif" class="img-fluid" alt="" />
+                            <img src="assets/images/Profolio/UI4.jpg" class="img-fluid" alt="" />
                             <div class="template-info">
-                                <h3>Digital - Private</h3>
-                                <p class="description">WallPaper</p>
+                                <h3>UI</h3>
+                                <p class="description">UI-Userpage</p>
                             </div>
                         </a>
                     </div>
                 </div>
-                <div class="item">
-                    <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/10.gif" class="img-fluid" alt="" />
-                            <div class="template-info">
-                                <h3>3D Model - private</h3>
-                                <p class="description">Wallpaper</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/local computer.PNG" class="img-fluid" alt="" />
-                            <div class="template-info">
-                                <h3>Digital - Private</h3>
-                                <p class="description">Interactive code</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="portfolio-content">
-                        <a href="#url" class="grid-anchor">
-                            <img src="assets/imgArtwork/school local.png" class="img-fluid" alt="" />
-                            <div class="template-info">
-                                <h3>Digital - Private </h3>
-                                <p class="description">Drawing</p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+                
             </div>
         </div>
     </div>
