--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light stroke">
 		<a class="navbar-brand" href="#index.html">
-            <img src="assets/images/LOGO.png" alt="LY" title="LY" style="height:60px;" />
+            <img src="assets/images/Profolio/LOGO.png" alt="LY" title="LY" style="height:60px;" />
         </a> 
       <a class="navbar-brand" href="index.html">
         <span>LERIC</span>
@@ -94,10 +94,10 @@
       <div class="modal-body">
         <div class="modal__content">
           <a class="navbar-brand"> <span>Leric</span></a>
-          <!-- if logo is image enable this   
+            
             <h2 class="logo">
-              <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-            </h2> -->
+              <img src="assets/images/Profolio/LOGO.png" alt="Liu Yang" title="" style="height:35px;" />
+            </h2>
           <p class="mt-md-3 mt-2">Like Every realistic In Coming
           </p>
 
@@ -132,6 +132,138 @@
 </div>
 <!-- //Domain modal -->
 <!-- home page contact section -->
+	  <section class="w3l-homeblock1" id="about">
+    <div class="midd-w3 py-5">
+        <div class="container py-lg-5 py-md-3">
+            <div class="row">
+                <div class="col-lg-6">
+                    <span class="text">My Plan</span>
+                    <h3 class="title-big"><span>Build Self Website</span> and develop my game</h3>
+                    <p class="mt-4">My dream is to create the most immersive games in the world, and all of these skills are needed</p>
+                    <ul class="service-list mt-md-5 mt-4">
+                        <li class="service-link"><a href="./UI.html">UI/UX design and Development</a></li>
+                        <li class="service-link"><a href="./Game.html">Game development</a></li>
+                        <li class="service-link"><a href="./Draw.html">Drawing</a></li>
+                        <li class="service-link"><a href="./3D.html">3D Modeling</a></li>
+                        <li class="service-link"><a href="./Photography.html">Photoshop,Photograhy and video clip</a></li>
+                    </ul>
+                    <a href="#url" class="btn btn-style btn-empty p-0">View my all services <span></span></a>
+                </div>
+                <div class="col-lg-6 mt-lg-0 mt-5">
+                    <div class="position-relative">
+                        <img src="assets/images/Profolio/self.jpg" alt="" class="radius-image img-fluid">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+	  <section class="w3l-homeblock2" id="skills">
+    <div class="midd-w3 py-5">
+        <div class="container py-lg-5 py-md-3">
+            <div class="row">
+                <div class="col-lg-6 align-self">
+                    <div class="position-relative px-lg-5 mx-lg-0 mx-md-5 image-padding">
+                        <img src="assets/images/skills.png" alt="" class="radius-image img-fluid">
+                        <div class="position-absolute-images">
+                            <img src="assets/images/file.png" class="img-fluid pos-img" alt="" />
+                            <img src="assets/images/file2.png" class="img-fluid pos-img2" alt="" />
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 mt-lg-0 mt-md-5 mt-4">
+                    <span class="text">My Featured Skills</span>
+                    <h3 class="title-big">I’m using <span>top leading</span>
+                        design methods.</h3>
+                    <p class="mt-4">I Specialize in Branding and Strategy, and am passionate about creating Awesome
+                        Portfolio work. And I always ready to impress the audience with my Creativity. </p>
+                    <div class="skills-bars mt-5">
+                        <div class="progress-info">
+                            <h6 class="progress-tittle">UI/UX design</h6>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 30%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-info">
+                            <h6 class="progress-tittle">Ideas &amp; Technology
+                            </h6>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-info">
+                            <h6 class="progress-tittle">Modeling</h6>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="progress-info mb-0">
+                            <h6 class="progress-tittle">Web design</h6>
+                            <div class="progress">
+                                <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 60%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<!-- //home page about section -->
+
+<!-- home page about section -->
+<section class="w3l-homeblock3" id="awards">
+    <div class="midd-w3 py-5">
+        <div class="container py-lg-5 py-md-3">
+            <div class="row">
+                <div class="col-lg-6">
+                    <span class="text">My Awards and Achievements </span>
+                    <h3 class="title-big">Professional awards and
+                        honors <span> I’ve reached.</span></h3>
+                    <p class="mt-4">Nothing </p>
+                    <div class="reward-list mt-5">
+                        <div class="reward-item">
+                            <div class="reward-item-photo"><img src="assets/images/banner.png" alt="" class="img-fluid"></div>
+                            <div class="reward-item-detail">
+                                <span class="reward-item-title">ISSDC</span>
+                                <p class="reward-item-descr">3rd Place In CHina</p>
+                            </div>
+                        </div>
+                        <div class="reward-item">
+                            <div class="reward-item-photo"><img src="assets/images/skills.png" alt="" class="img-fluid"></div>
+                            <div class="reward-item-detail">
+                                <span class="reward-item-title">None</span>
+                                <p class="reward-item-descr">None</p>
+                            </div>
+                        </div>
+                        <div class="reward-item">
+                            <div class="reward-item-photo"><img src="assets/images/banner.png" alt="" class="img-fluid"></div>
+                            <div class="reward-item-detail">
+                                <span class="reward-item-title">None</span>
+                                <p class="reward-item-descr">None</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 align-self mt-lg-0 mt-md-5 mt-4">
+                    <div class="position-relative px-lg-5 mx-lg-0 mx-md-5 image-padding">
+                        <img src="assets/images/awards.png" alt="" class="radius-image img-fluid">
+                        <div class="position-absolute-images">
+                            <img src="assets/images/award.png" class="img-fluid pos-img" alt="" />
+                            <img src="assets/images/award1.png" class="img-fluid pos-img1" alt="" />
+                            <img src="assets/images/aw
+ard2.png" class="img-fluid pos-img2" alt="" />
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <section class="w3l-contactblock" id="contact">
     <div class="midd-w3 py-5">
         <div class="container py-lg-4 py-md-3">
