--- a/Game.html
+++ b/Game.html
@@ -20,7 +20,7 @@
   <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light stroke">
 		 <a class="navbar-brand" href="#index.html">
-            <img src="assets/images/LOGO.png" alt="Your logo" title="Your logo" style="height:60px;" />
+            <img src="assets/images/Profolio/LOGO.png" alt="Your logo" title="Your logo" style="height:60px;" />
         </a> 
       <a class="navbar-brand" href="index.html">
         <span>LERIC</span>
@@ -96,7 +96,7 @@
           <a class="navbar-brand"> <span>LERIC </span></a>
        
             <h2 class="logo">
-              <img src="assets/images/LOGO.png" alt="Your logo" title="Your logo" style="height:60px;" />
+              <img src="assets/images/Profolio/LOGO.png" alt="Your logo" title="Your logo" style="height:60px;" />
             </h2> 
           <p class="mt-md-3 mt-2">Like Every Realistic In Coming
           </p>
@@ -137,21 +137,21 @@
         <div class="container py-lg-4 py-md-3">
             <div class="contact-heading text-center mb-5">
                 <span class="text">My Portfolio </span>
-                <h3 class="title-big">Some of my <span>Latest works</span></h3>
+                <h3 class="title-big">Game <span>Project</span></h3>
             </div>
             <div id="owl-portfolio" class="owl-carousel owl-theme mt-4 py-md-2 mb-4">
                 <div class="item">
                     <div class="portfolio-content">
                         <a href="#url" class="grid-anchor">
-                            <img src="assets/images/template1.jpg" class="img-fluid" alt="" />
+                            <img src="assets/images/Profolio/game2.png" class="img-fluid" alt="" />
                             <div class="template-info">
-                                <h3>Digital - Private</h3>
-                                <p class="description">Drawing </p>
+                                <h3>Game</h3>
+                                <p class="description">robber game </p>
                             </div>
                         </a>
                     </div>
                 </div>
-                <div class="item">
+                <!--<div class="item">
                     <div class="portfolio-content">
                         <a href="#url" class="grid-anchor">
                             <img src="assets/images/template2.jpg" class="img-fluid" alt="" />
@@ -238,7 +238,7 @@
                             </div>
                         </a>
                     </div>
-                </div>
+                </div>-->
             </div>
         </div>
     </div>
